--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tokio = { version = "1.47", default-features = false, features = [
 ] }
 tokio-stream = "0.1"
 futures = "0.3"
+pin-project = "1.1.10"
 
 # Tracing
 tracing = "0.1"
