--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ thiserror = "2.0"
 # Misc
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.9"
-charming = "0.6"
+charming = { version = "0.6", features = ["ssr"] }
 toml = "0.9"
 spin_sleep = "1.3"
 derive_more = { version = "2.0", features = ["display", "constructor"] }
