--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,5 +46,12 @@ toml = "0.9"
 spin_sleep = "1.3"
 derive_more = { version = "2.0", features = ["display", "constructor"] }
 
+# Inspiration
+barter = "0.12"
+barter-data = "0.10"
+barter-integration = "0.9"
+barter-instrument = "0.3"
+barter-execution = "0.6"
+
 [features]
 default = []
