--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,6 @@ tokio-stream = "0.1"
 futures = "0.3"
 pin-project = "1.1.10"
 
-# eBPF
-aya = "0.13"
-
 # Tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
@@ -38,6 +35,8 @@ tracing-appender = "0.2.3"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+simd-json = "0.15"
+simdutf8 = "0.1"
 
 # Error
 thiserror = "2.0"
@@ -60,6 +59,7 @@ barter-execution = "0.6"
 [target.'cfg(target_os = "linux")'.dependencies]
 libbpf-rs = "0.25"
 libbpf-cargo = "0.25"
+aya = "0.13"
 
 [dev-dependencies]
 criterion = "0.7"
