--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing-appender = "0.2"
 
-# Ser/Deser
+# SerDe
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simd-json = "0.15"
@@ -89,7 +89,7 @@ aya = "0.13"
 [dev-dependencies]
 criterion = "0.7"
 pprof = "0.15"
-rexpect = "0.6.2"
+rexpect = "0.6"
 
 [features]
 default = []
